compiler/tests/compile-error/if-errors.arret
(import [stdlib base])

(def _ (if))            ;~ ERROR wrong argument count; expected 3
(def _ (if true))       ;~ ERROR wrong argument count; expected 3
(def _ (if true false)) ;~ ERROR wrong argument count; expected 3